--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
   <link rel="shortcut icon" type="image/jpg" href="res/favicon.ico">
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-    </style>
+  
 </head>
 <body>
  
@@ -777,7 +775,7 @@
 
 <footer style="background-color: rgb(0, 0, 0); color: white; text-align: center; padding: 20px;">
   <p style="margin: 0; letter-spacing: 3px;"> 
-   2022 | Designed and Developed By <a href="" style="color: rgb(36, 138, 255);"> ARNAV ANAND</a>
+   2022 | Designed and Developed By <a href="" style="color: rgb(36, 138, 255);"> ARNAV & RIDHAM</a>
   </p>
 </footer>
 
